# 05_chat

./: .env  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  deny.toml  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: encoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yaml
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml
chat_test/tests/: chat.rs
migrations/: 20240709013020_initial.down.sql  20240709013020_initial.up.sql  20240710204214_workspace.down.sql  20240710204214_workspace.up.sql  20240718022339_trigger.up.sql
notify_server/: Cargo.toml  index.html  notify.yml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
