[workspace]
members = [ "chat_core","chat_server", "chat_test", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
    "macros",
] }

axum-extra = "0.9.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.33"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres","chrono","tls-rustls"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt","rt-multi-thread","macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = "0.4.38"

jwt-simple = "0.12.9"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "compression-full"] }
chat_core = { path = "./chat_core" }
chat_server = { path = "./chat_server" }
notify_server = { path = "./notify_server" }
