[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"


[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]


[dependencies]
anyhow.workspace = true
argon2 = { version = "0.5.3", features = ["std"] }
axum.workspace = true
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
jwt-simple = "0.12.9"
mime_guess = "2.0.5"
serde.workspace = true
serde_json = "1.0.120"
serde_yaml.workspace = true
sha1 = "0.10.6"
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "compression-full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.10.0", features = ["v7", "serde"] }
chat_core.workspace = true
sqlx-db-tester = { version = "0.4.2", optional = true }
http-body-util = { version = "0.1.1", optional = true }

[dev-dependencies]
chat_server = { workspace = true, features = ["test-util"] }
