[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow.workspace = true
axum.workspace = true
chat_core.workspace = true
chat_server = { workspace = true, features = ["test-util"] }
notify_server.workspace = true
reqwest = { version = "0.12.5", features = ["json", "multipart", "rustls-tls", "stream"] ,default-features = false }
reqwest-eventsource = "0.6.0"
serde.workspace = true
serde_json = "1.0.120"
tokio.workspace = true

[dependencies]
futures = "0.3.30"
